fix-overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -240,7 +240,7 @@ body.theme3 {
 	transition: margin-left 0.4s;
 }
 
-.display {
+.display-wrapper {
 	grid-area: disp;
 	background-color: var(--screen-bg);
 	border-radius: 1.5vh;
@@ -384,12 +384,24 @@ body.theme3 {
 	grid-area: dot;
 }
 
-.display {
+.display-wrapper {
 	font-size: 1.4em;
 	display: flex;
 	align-items: center;
-	justify-content: right;
+	justify-content: center;
 	padding-right: 0.6em;
+	padding-left: 0.6em;
+	min-width: 0;
+}
+
+.display {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: right;
+	min-width: 0;
+	overflow: hidden;
 }
 
 @media(min-aspect-ratio: 0.75) {
